# DICOM-Manager

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
dicom_manager/: directory_manager.py
dicom_manager/.ipynb_checkpoints/: exception_handling-checkpoint.py  shortcuts-checkpoint.py
dicom_manager/file_loaders/: dicom_loader.py  dicom_pair_loader.py  file_loader.py  nifti_loader.py
dicom_manager/file_readers/: read_dicom.py  read_image_label_pair.py  read_image_volume.py  read_multi_image_label_pair.py  read_nifti.py
dicom_manager/file_viewers/: array_plotter.py  array_viewer.py  rgb_viewer.py
dicom_manager/file_viewers/.ipynb_checkpoints/: array_viewer-checkpoint.py
dicom_manager/file_writers/: dicom_writer.py  save_measurements_to_csv.py  save_qc_images.py
dicom_manager/postprocess/: align_masks.py  compare_labels.py  postprocess.py
dicom_manager/preprocess/: dicom_finder.py  dicom_tag_parser.py  dicom_validator.py  fix_dicom_for_nifti.py  preprocess.py  preprocess_image_label_pair.py  slice_manager.py
tests/: test_read_dicom.py
