[tool.poetry]
name = "ballir_dicom_manager"
version = "0.1.0"
description = "process and manage DICOM files"
authors = ["bashirlab <brandon.konkel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.4"
nibabel = "^3.2.1"
matplotlib = "^3.5.0"
pydicom = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
